--- a/notes/app/src/main/res/values/strings.xml
+++ b/notes/app/src/main/res/values/strings.xml
@@ -1,12 +1,27 @@
 <resources>
     <string name="app_name">notes</string>
-    <string-array name="titles">
-        <item>Facebook</item>
-        <item>Instagram</item>
+
+    <string-array name="theme">
+        <item>Pink</item>
+        <item>Red</item>
+        <item>Green</item>
+        <item>Teal</item>
     </string-array>
 
-    <string-array name="descriptions">
-        <item>ic_launcher_foreground</item>
-        <item>ic_launcher_background</item>
+    <string-array name="fontsize">
+    <item>18</item>
+    <item>20</item>
+    <item>22</item>
+    <item>24</item>
+        <item>26</item>
+        <item>28</item>
+        <item>30</item>
+        <item>32</item>
+    </string-array>
+
+    <string-array name="fontstyle">
+        <item>Cookie</item>
+        <item>Courgette</item>
+        <item>Indie</item>
     </string-array>
 </resources>
