--- a/notes/app/src/main/res/values/strings.xml
+++ b/notes/app/src/main/res/values/strings.xml
@@ -2,11 +2,11 @@
     <string name="app_name">NotePins</string>
 
     <string-array name="theme">
-        <item>Pink</item>
-        <item>Orange</item>
+        <item>Yellow</item>
+        <item>Grey</item>
+        <item>Tile</item>
         <item>Green</item>
-        <item>Lime</item>
-        <item>Purple</item>
+        <item>Indigo</item>
     </string-array>
 
     <string-array name="fontsize">
